# geox

./: README.md  aligi.html  cptexp-01.ipynb  cptexp-02.html  cptexp-02.qmd  cptx-data.qmd  cptx-view.html  cptx-view.qmd  cptx.html  cptx.qmd  custom.scss  pyproject.toml  styles.css  test.html  utils.html  utils.js  utils.qmd
cptexp-02_files/libs/bootstrap/: bootstrap.min.css
cptx_files/libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
data-source/: dt_loc.csv  dt_unit.csv
