[tool.poetry]
name = "cptexp"
version = "0.1.0"
description = ""
authors = ["Erdi Myftaraga <erdi.myftaraga@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
polars = "^0.18.11"
tidypolars = "^0.2.19"
nbformat = "^5.9.2"
nbclient = "^0.8.0"
xlsx2csv = "^0.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
